--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 askama = "0.11.1"
 axum = { version = "0.7.2" }
 axum-prometheus = "0.5.0"
-reqwest = { version = "0.11.9", features = ["json"] }
+reqwest = { version = "0.11.9", features = ["json", "rustls-tls"], default-features=false }
 scraper = "0.12.0"
 serde = { version = "1.0.136", features = ["derive"]}
 tokio = { version = "1.0", features = ["full"] }
